<resources>
    <string name="add_button">＋</string>
    <string name="activity_name">cn.minimote.toolbox.activity.MainActivity</string>
    <string name="app_icon">应用图标</string>
    <string name="app_name">工具箱</string>
    <string name="toast_package_name">包名</string>
    <string name="toast_app_name">应用名</string>
    <string name="toast_app_version">版本号</string>
    <string name="toast_author_name">作者名</string>
    <string name="app_name_en">toolbox</string>
    <string name="app_version">版本：%s</string>
    <string name="app_author">作者：%s</string>
    <string name="author_name">微尘 (minimote)</string>
    <string name="author_name_cn">微尘</string>
    <string name="author_name_en">minimote</string>
    <string name="textView_package_name">Package Name</string>
    <string name="textView_activity_name">Activity Name</string>
    <string name="exit_button">＜ 退出</string>
    <string name="have_reset">已经重置了</string>
    <string name="loading_text">加载中，请稍后…</string>
    <string name="package_name">cn.minimote.toolbox</string>
    <string name="return_button">＜ 返回</string>
    <string name="save_button">保存</string>
    <string name="save_success">已保存</string>
    <string name="setting">设置</string>
    <string name="split_char">\n</string>
    <string name="sort">排序</string>
    <string name="start_fail">启动失败「%s」</string>
    <string name="switch_description_whether_show_in_home">是否在页显示的开关</string>
    <string name="switch_description_whether_show_widget_name">是否显示工具名称的开关</string>
    <string name="time">10:24</string>
    <string name="time_format">HH:mm:ss</string>
    <string name="widget_type_full">整行</string>
    <string name="already_enter_edit_mode">已经在编辑模式了</string>
    <string name="reset">重置</string>
    <string name="show_widget_name">显示工具名称</string>
    <string name="widgetSize">工具宽度</string>
    <string name="widgetSize_fraction">%1$d / %2$d</string>
    <string name="widgetSize_increase">＋</string>
    <string name="widgetSize_decrease">－</string>
    <string name="widgetName">工具名称</string>
    <string name="widgetSize_num">%d</string>
    <string name="widgetSize_maxSize">%d</string>
    <string name="widget_icon">工具图标</string>
    <string name="toast_no_widget_exit_multiselect_mode">当前没有工具，退出多选模式</string>
    <string name="textView_no_widget">点击添加工具</string>
    <string name="hint_search_activities">搜索 %d 项</string>
    <string name="cancel">取消</string>
    <string name="no_result">无结果</string>
    <string name="recommended_activity">推荐活动</string>
    <string name="other_activity">其他活动</string>
    <string name="unknown">未知</string>
    <string name="delete_widget">取消收藏</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_data">清除数据</string>
    <string name="confirm">确定</string>
    <string name="clear_cache_confirmation">确定要清除缓存吗？</string>
    <string name="clear_cache_success">缓存清除成功</string>
    <string name="clear_data_confirmation">确定要清除数据吗？</string>
    <string name="clear_data_success">数据清除成功</string>
    <string name="support_author">支持作者</string>
    <string name="right">＞</string>
    <string name="supportAuthor_welcome">感谢你的支持！</string>
    <string name="supportAuthor_notice">注：只接受成年朋友的打赏，如果你是未成年的朋友，欢迎你给项目点点 Star，和他人分享一下本项目，这就是对作者最大的支持。</string>
    <string name="qr_wechat">微信收款码</string>
    <string name="qr_alipay">支付宝收款码</string>
    <string name="save">保存</string>
    <string name="alipay_scan">支付宝扫一扫</string>
    <string name="alipay_not_installed">未安装支付宝</string>
    <string name="qr_url_alipay">https://qr.alipay.com/fkx13254he9xc0xpa3tdva0</string>
    <string name="goto_alipay">直接跳转支付宝</string>
    <string name="packageName_alipay">com.eg.android.AlipayGphone</string>
    <string name="alipay">支付宝</string>
    <string name="wechat">微信</string>
    <string name="goto_wechat">直接跳转微信</string>
    <string name="open_wechat_scan">打开扫一扫</string>
    <string name="packageName_wechat">com.tencent.mm</string>
    <string name="wechat_not_installed">未安装微信</string>
    <string name="unable_to_create_folder">无法创建文件夹</string>
    <string name="has_been_saved_to">已保存到 %s</string>
    <string name="image_save_failed">保存失败「%s」</string>
    <string name="about_project">关于项目</string>
    <string name="blank">\u3000</string>
    <string name="about_project_notice">\u3000\u3000该项目由微尘 (minimote) 独立开发，遵循 MIT 许可协议，改版请务必保留此声明和署名。</string>
    <string name="projectPath_name">项目地址</string>
    <string name="issuePath_name">反馈地址</string>
    <string name="gitee">Gitee【推荐】</string>
    <string name="projectPath_gitee">https://gitee.com/minimote/toolbox</string>
    <string name="github">GitHub</string>
    <string name="projectPath_github">https://github.com/minimote/toolbox</string>
    <string name="qr_gitee">Gitee 网站二维码</string>
    <string name="qr_github">GitHub 网站二维码</string>
    <string name="openUrlError">无法打开「%s」</string>
    <string name="clipboard_copy_success">「%1$s」%2$s已复制</string>
    <string name="save_image">保存图片</string>
    <string name="qr_alipay_file_name">工具箱-支付宝收款码.png</string>
    <string name="qr_wechat_file_name">工具箱-微信收款码.png</string>
    <string name="qr_gitee_file_name">工具箱-项目地址-Gitee.png</string>
    <string name="qr_github_file_name">工具箱-项目地址-GitHub.png</string>
    <string name="can_be_empty">（当前为空）</string>
    <string name="package_name_debug">cn.minimote.toolbox.debug</string>
    <string name="check_update">检查更新</string>
    <string name="find_new_version">发现新版本</string>
    <string name="latest_version">%s</string>
    <string name="whether_download_now">是否立即下载？</string>
    <string name="latest_version_installed">已经是最新版本了</string>
    <string name="failed_to_check_update">检查更新失败，请检查网络连接</string>
    <string name="error_occurred_while_check_update">检查更新失败</string>
    <string name="failed_to_download_update">下载失败，请检查网络连接</string>
    <string name="error_occurred_while_download_update">下载失败</string>
    <string name="download_now">立即下载</string>
    <string name="download_later">以后再说</string>
    <string name="title">标题</string>
    <string name="downloading_update_title">工具箱下载更新</string>
    <string name="downloading_update_description">正在下载更新</string>
    <string name="checking_update">正在检查更新…</string>
    <string name="downloading_please_wait">下载中，请稍后…</string>
    <string name="download_failed">下载失败</string>
    <string name="unable_get_download_status">无法获取下载状态，需要手动点击安装</string>
    <string name="setting_title_update">更新</string>
    <string name="title_check_update_frequency">更新检查频率</string>
    <string name="check_update_frequency_daily">每天</string>
    <string name="check_update_frequency_weekly">每周</string>
    <string name="check_update_frequency_monthly">每月</string>
    <string name="check_update_frequency_never">从不</string>
    <string name="next_check_time">下次检查时间：%s</string>
    <string name="check_time_format">yyyy年MM月dd日\u3000HH:mm:ss</string>
    <string name="error">出错</string>
    <string name="last_check_update_time_en">last_check_update_time</string>
    <string name="none">无</string>
    <string name="title_vibration_mode">振动模式</string>
    <string name="setting_title_vibration">振动</string>
    <string name="vibration_mode_on">开启</string>
    <string name="vibration_mode_off">关闭</string>
    <string name="vibration_mode_auto">跟随系统</string>
    <string name="instruction">使用说明</string>
    <string name="instruction_url">https://gitee.com/minimote/toolbox/blob/master/instruction/instruction.md</string>
    <string name="update_log">更新日志</string>
    <string name="update_log_url">https://gitee.com/minimote/toolbox/blob/master/update_log.md</string>
    <string name="update_log_content_url">https://gitee.com/minimote/toolbox/raw/master/update_log.md</string>
    <string name="problem_feedback">问题反馈</string>
    <string name="problem_feedback_url">https://gitee.com/minimote/toolbox/issues</string>
    <string name="toast_shortcut_not_supported">设备不支持创建快捷方式</string>
    <string name="toast_shortcut_create_success">创建成功</string>
    <string name="fragment_name_widget_list">收藏</string>
    <string name="fragment_name_my_list">关于</string>
    <string name="time_example">00:00:00</string>
    <string name="date_example">00月00日  周零</string>
    <string name="widgetName_time_and_date">时间和日期</string>
    <string name="network_type_wifi">WIFI网络</string>
    <string name="network_type_mobile">数据网络</string>
    <string name="network_type_bluetooth">蓝牙网络</string>
    <string name="network_type_other">其他网络</string>
    <string name="network_type_disconnected">无网络连接</string>
    <string name="toast_no_network">网络未连接</string>
    <string name="dialog_message_network">当前使用的是「%s」，确定要继续吗？</string>
    <string name="toast_network_access_denied">你设置了不允许使用「%s」</string>
    <string name="dialog_message_network_check_update">当前使用的是「%s」，确定要检查更新吗？</string>
    <string name="setting_title_network">网络</string>
    <string name="network_access_mode_alert">每次提醒</string>
    <string name="network_access_mode_deny">不允许</string>
    <string name="network_access_mode_allow">允许</string>
    <string name="please_grant_install_permission">请授予安装权限</string>
    <string name="restore_default">恢复默认</string>
    <string name="fragment_name_tool_list">全部</string>
    <string name="app_tool">软件工具</string>
    <string name="package_not_installed">「%s」未安装</string>
    <string name="system_tool">系统工具</string>
    <string name="group_indicator">分组指示器</string>
    <string name="enter_arrow">进入箭头</string>
    <string name="license_title">开放源代码许可</string>
    <string name="data_error_and_delete_file">数据异常，已删除</string>
    <string name="add_local_app">添加软件</string>
    <string name="create_shortcut">创建快捷方式</string>
    <string name="add_to_home">收藏</string>
    <string name="already_on_home">已经收藏了</string>
    <string name="collection_success">「%s」收藏成功</string>
    <string name="clear_button">清除按钮</string>
    <string name="edit_this_widget">编辑工具</string>
    <string name="multi_select">多选</string>
    <string name="button_remove">移除</string>
    <string name="multiselect_mode_dont_allow_page_switch">多选模式不允许切换页面</string>
    <string name="sort_mode_dont_allow_page_switch">排序模式不允许切换页面</string>
    <string name="cancel_collection">取消收藏</string>
    <string name="confirm_cancel_collection_tools">确定要取消收藏这「%d」个工具吗？</string>
    <string name="confirm_cancel_collection_single_tool">确定要取消收藏「%s」吗？</string>
    <string name="confirm_remove_tools">确定要移除这「%d」个工具吗？</string>
    <string name="confirm_remove_single_tool">确定要移除「%s」吗？</string>
    <string name="remove_success_tools">「%d」个工具移除成功</string>
    <string name="remove_success_single_tool">「%s」移除成功</string>
    <string name="already_cancel_collection">「%s」已取消收藏</string>
    <string name="sort_order_name_a_to_z">名字(A→Z)</string>
    <string name="sort_order_name_z_to_a">名字(Z→A)</string>
    <string name="sort_order_launch_cnt_less_to_more">启动次数(少→多)</string>
    <string name="sort_order_launch_cnt_more_to_less">启动次数(多→少)</string>
    <string name="sort_order_last_launch_time_early_to_late">最后启动时间(早→晚)</string>
    <string name="sort_order_last_launch_time_late_to_early">最后启动时间(晚→早)</string>
    <string name="sort_order_create_time_early_to_late">创建时间(早→晚)</string>
    <string name="sort_order_create_time_late_to_early">创建时间(晚→早)</string>
    <string name="sort_order_modified_time_early_to_late">修改时间(早→晚)</string>
    <string name="sort_order_modified_time_late_to_early">修改时间(晚→早)</string>
    <string name="sort_finished">排序完成</string>
    <string name="enter_free_sort">长按拖动调整</string>
    <string name="exit_sort_mode">已退出排序模式</string>
    <string name="enter_multiselect_mode">进入多选模式</string>
    <string name="exit_multiselect_mode">已退出多选模式</string>
    <string name="select_all">全选</string>
    <string name="reverse_select">反选</string>
    <string name="sort_mode">排序方式</string>
    <string name="free_sort">拖动排序</string>
    <string name="create">创建</string>
    <string name="name">名称</string>
    <string name="button">按钮</string>
    <string name="shortcut_icon">快捷方式图标</string>
</resources>