<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ConstraintLayout.Toolbox.Clickable.Dark">

    <TextView
        android:id="@+id/textView_nickname"
        style="@style/TextView.Toolbox.EditOperateName.Dark"
        android:gravity="start"
        android:text="@string/widgetSize"
        app:layout_constraintBottom_toTopOf="@+id/button_widgetSize_decrease"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_reset_widgetSize"
        style="@style/Button.Toolbox.Reset.Dark"
        android:text="@string/reset"
        app:layout_constraintBottom_toTopOf="@id/button_widgetSize_increase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_nickname"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_widgetSize_decrease"
        style="@style/Button.Toolbox.Reset.Dark"
        android:text="@string/widgetSize_decrease"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textView_widgetSize_fraction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_nickname" />

    <TextView
        android:id="@+id/textView_widgetSize_fraction"
        style="@style/TextView.Toolbox.Dark"
        android:layout_marginTop="@dimen/layout_size_2_footnote"
        android:text="@string/widgetSize_fraction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_widgetSize_increase"
        app:layout_constraintStart_toEndOf="@+id/button_widgetSize_decrease"
        app:layout_constraintTop_toBottomOf="@id/textView_nickname" />

    <Button
        android:id="@+id/button_widgetSize_increase"
        style="@style/Button.Toolbox.Reset.Dark"
        android:text="@string/widgetSize_increase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView_widgetSize_fraction" />

</androidx.constraintlayout.widget.ConstraintLayout>
