<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ConstraintLayout.Toolbox.Dark">

    <TextView
        android:id="@+id/textView_title"
        style="@style/TextView.Toolbox.Dark"
        android:layout_marginTop="@dimen/layout_size_2_footnote"
        android:padding="@dimen/layout_size_3_script"
        android:text="@string/gitee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_content"
        style="@style/TextView.Toolbox.URL.Dark"
        android:text="@string/projectPath_gitee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_title" />

    <ImageView
        android:id="@+id/imageView_qr_code"
        style="@style/ImageView.Toolbox.QR.Dark"
        android:contentDescription="@string/qr_gitee"
        android:src="@drawable/qr_gitee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_content" />


</androidx.constraintlayout.widget.ConstraintLayout>
