<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ConstraintLayout.Toolbox.Clickable.Dark"
    android:layout_width="wrap_content"
    android:background="@drawable/background_ripple_round"
    android:paddingVertical="@dimen/layout_size_1.5_footnote">

    <ImageView
        android:id="@+id/imageView_app_icon"
        style="@style/ImageView.Toolbox.AppIcon.Dark"
        android:contentDescription="@string/app_icon"
        android:src="@drawable/ic_toolbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_app_name"
        style="@style/TextView.Toolbox.AppName.Dark"
        android:layout_width="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toTopOf="@id/textView_activity_name"
        app:layout_constraintStart_toEndOf="@id/imageView_app_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_activity_name"
        style="@style/TextView.Toolbox.ActivityName.Dark"
        android:layout_width="wrap_content"
        android:text="@string/activity_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageView_app_icon"
        app:layout_constraintTop_toBottomOf="@+id/textView_app_name" />


</androidx.constraintlayout.widget.ConstraintLayout>
