<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout_container"
    style="@style/ConstraintLayout.Toolbox.Clickable.Dark"
    android:background="@drawable/background_ripple_round"
    android:paddingVertical="@dimen/layout_size_2_small"
    android:paddingStart="@dimen/layout_size_2_5_small">


    <!--    <include-->
    <!--        android:id="@+id/layout_shadow_image_view"-->
    <!--        layout="@layout/layout_shadow_image_view"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->


    <ImageView
        android:id="@+id/imageView_app_icon"
        style="@style/ImageView.Toolbox.AppIcon.Dark"
        android:contentDescription="@string/app_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/ProgressBar.Icon.Toolbox.Dark"
        app:layout_constraintBottom_toBottomOf="@id/imageView_app_icon"
        app:layout_constraintEnd_toEndOf="@id/imageView_app_icon"
        app:layout_constraintStart_toStartOf="@id/imageView_app_icon"
        app:layout_constraintTop_toTopOf="@id/imageView_app_icon" />


    <TextView
        android:id="@+id/textView_app_name"
        style="@style/TextView.Toolbox.AppName.Dark"
        android:text="@string/app_name"
        app:layout_constraintBottom_toTopOf="@id/textView_activity_name"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toEndOf="@id/imageView_app_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_activity_name"
        style="@style/TextView.Toolbox.ActivityName.Dark"
        android:text="@string/activity_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toEndOf="@id/imageView_app_icon"
        app:layout_constraintTop_toBottomOf="@+id/textView_app_name" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="45dp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_whether_show_in_home"
        style="@style/Switch.Toolbox.Dark"
        android:contentDescription="@string/switch_description_whether_show_in_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
