<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/app_icon"
        style="@style/ImageView.Toolbox.AppIcon.Dark"
        android:contentDescription="@string/app_icon"
        android:src="@drawable/ic_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/layout_size_1_large" />

    <TextView
        android:id="@+id/app_name"
        style="@style/TextView.Toolbox.AppName.Dark"
        android:text="@string/app_name"
        app:layout_constraintBottom_toTopOf="@id/activity_name"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_name"
        style="@style/TextView.Toolbox.ActivityName.Dark"
        android:text="@string/activity_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="42dp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchButton"
        style="@style/Switch.Toolbox.Dark"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color"
        android:contentDescription="@string/switch_button_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
